# opal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/pr-review/references/: report-template.md  review-dimensions.md  severity-rubric.md
.claude/skills/pr-review/scripts/: gather_context.sh  post_review.py
.claude/skills/project-review/: SKILL.md
.claude/skills/project-review/evals/: evals.json
.claude/skills/project-review/references/: priority-rubric.md  review-dimensions.md  templates.md
.claude/skills/project-review/scripts/: create_issues.py  map_project.sh
.github/workflows/: ci.yml  release.yml  wheels.yml
cli/: args.hpp  format.hpp  main.cpp  pricer.hpp
docs/: project_review_20260618.md  releasing.md
docs/vignettes/: 01-getting-started.md  02-pricing-and-methods.md  03-exotic-payoffs.md  04-stochastic-volatility.md  05-greeks-and-implied-vol.md  06-scenario-analysis.md  07-portfolio-risk.md  08-interest-rate-options.md  09-python-api.md  README.md
examples/: book.csv  opal_walkthrough.ipynb  pretrade_analysis.py
include/opal/: opal.hpp  version.hpp
include/opal/analytics/: calibration.hpp  greeks.hpp  heston_greeks.hpp  implied_vol.hpp  vol_surface.hpp
include/opal/core/: dividends.hpp  types.hpp
include/opal/engines/: lattice.hpp  lsmc.hpp  monte_carlo.hpp  pde.hpp
include/opal/math/: normal.hpp  optimize.hpp  solvers.hpp
include/opal/models/: asian.hpp  barrier.hpp  black_scholes.hpp  compound.hpp  digital.hpp  discrete_div.hpp  heston.hpp  lookback.hpp  partial_barrier.hpp  sabr.hpp  two_asset.hpp
include/opal/rates/: cap_floor.hpp  curve.hpp  hull_white.hpp  swaption.hpp
python/: MANIFEST.in  bindings.cpp  pyproject.toml  setup.py
python/opal/: __init__.py
python/tests/: test_api.py
scripts/: release.sh
tests/: opal_test.hpp  test_analytic.cpp  test_engines.cpp  test_main.cpp  test_rates.cpp
